What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

Jun 21, 2010
* [MM] Move CMake files to CMake folder
* [MM] Remove some warnings in code

April 8, 2010
* [FOD] Fixed problem with Borland C++ Builder (Borland C do not have lrintf). Thanks Marek Mauder for this fix.
* [FOD] Fixed pi.c bug (issue 15 on google code). Thanks to Anton Lionel for catching this.
* [FOD] Fixed MJ2 codec bugs (issues 23-24 on google code). Thanks to Winfried for these patches.

March 26, 2010
+ [FOD] Added support for "jpc" codestreams which are equivalent to "j2c" codestreams. Thanks to Winfried for this patch

March 24, 2010
* [FOD] Code improvements using 'g++-4.4.0' to trace the code. Thanks to Winfried for this patch.		

March 7, 2010
* [FOD] Fixed small compatibility issues with win32 in codec (moved include <strings.h>)

March 5,2010
! [FOD] Updated makefiles for v1.4 and v2.0

February 16, 2010
* [FOD] Fixed libopenjpeg Makefile 

January 20, 2010
! [FOD] Created a new constant in openjpeg.h to differentiate the case when the colorspace is not supported by the library and when it is not specified in the codestream. Suggested by Matteo Italia.  

September 10, 2009
* [antonin] fixed minor bugs which were triggering warnings at compilation (different signedness, wrong pointer type, etc)

August 21, 2008
* [antonin] found a bug in tcd.c that was preventing to find the correct threshold in tcd_rateallocate.c for high-precision images. Applied a temporary patch but a better solution should be found.

August 8, 2008
! [FOD] Modified the way raw images with more that 8bpp are read and written

August 2nd, 2008
* [Mathieu Malaterre] remove INLINE from forward decl. Fix CMakeLists.txt for UNIX platforms

August 1st, 2008
- [antonin] removed t1_generate_luts.c, useless in version 2.
! [antonin] updated XCode project file for mac users.

---------------------------
July 31, 2008
CREATION OF A OPJ V2 BRANCH
---------------------------

July 31, 2008